--- a/index.html
+++ b/index.html
@@ -34,6 +34,39 @@
                      <a href="#recherche" class="phonesearch"><i class="fas fa-search"></i></a>
                 </div>
             </div>
+            <div class="filterarea">
+                <div class="filters">
+                        Filtres
+                        <div class="solofilter">
+                            <span class="filtermarks"><i class="fas fa-money-bill-wave"></i></span>
+                            <a href="#FiltreEconomique">
+                                <span class="filtertext">Économique</span>
+                            </a>
+                        </div>
+                        <div class="solofilter">
+                            <span class="filtermarks"><i class="fas fa-child"></i></span>
+                            <a href="#FiltreFamilial">
+                                <span class="filtertext">Familial</span>
+                            </a>
+                        </div>
+                        <div class="solofilter">
+                            <span class="filtermarks"><i class="fas fa-heart"></i></span>
+                            <a href="#FiltreRomantique">
+                                <span class="filtertext">Romantique</span>
+                            </a>
+                        </div>
+                        <div class="solofilter">
+                            <span class="filtermarks"><i class="fas fa-dog"></i></span>
+                            <a href="#FiltreAnimaux">
+                                <span class="filtertext">Animaux Autorisés</span>
+                            </a>
+                        </div>
+                    
+                </div>
+                <div class="info">
+                    <i class="fas fa-info" id="info"></i> Plus de 500 logements sont disponibles dans cette ville
+                </div>
+            </div>
         </div>
     </body>
 </html>
