--- a/index.html
+++ b/index.html
@@ -58,7 +58,31 @@
                     <i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville
                 </div>
             </section>
-            
+            <section class="Hebergements">
+                <section class="targetlodging">
+                    <header class="targetheader">
+                        <h2 class="targetheadertitle">Hébergements à Marseilles</h2>
+                    </header>
+                    <article class="targetcard">
+                        <figure class="targetfigure">
+                            <img src="images/AubergeCannebiere.jpg" class="targetimg" alt="Chambre avec vue sur la rue et lit superposé ">
+                            <figcaption class="targetfigurecaption">
+                                <h3 class="targetfiguretitle">Auberge la Cannebière</h3>
+                                <p class="targetcardprice">Nuit à partir de <strong>25€</strong></p>
+                                <div class="targetcardgrade">
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star badgrade"></i>
+                                </div>        
+                            </figcaption>
+                        </figure>
+                    </article>
+                </section>
+                <article class="mostpopularlodging">
+                </article>
+            </section>
         </div>
         <footer class="footer">
             <ul>
