Section hébergements avancée mais pas encore finie

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <header class="targetheader">
                         <h2 class="targetheadertitle">Hébergements à Marseilles</h2>
                     </header>
+                <section class="targetlodgingdcards">
                     <article class="targetcard">
                         <figure class="targetfigure">
                             <img src="images/AubergeCannebiere.jpg" class="targetimg" alt="Chambre avec vue sur la rue et lit superposé ">
@@ -75,10 +76,91 @@
                                     <i class="fas fa-star goodgrade"></i>
                                     <i class="fas fa-star goodgrade"></i>
                                     <i class="fas fa-star badgrade"></i>
-                                </div>        
+                                </div>          
                             </figcaption>
                         </figure>
                     </article>
+                    <article class="targetcard">
+                        <figure class="targetfigure">
+                            <img src="images/HotelduPort.jpg" class="targetimg" alt="Chambre très grise avec deux lits séparés">
+                            <figcaption class="targetfigurecaption">
+                                <h3 class="targetfiguretitle">Hôtel du Port</h3>
+                                <p class="targetcardprice">Nuit à partir de 52€</p>
+                                <div class="targetcardgrade">
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                </div>          
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="targetcard">
+                        <figure class="targetfigure">
+                            <img src="images/HotelLesMouettes.jpg" class="targetimg" alt="Chambre avec deux lits séparés et une grande penderie ">
+                            <figcaption class="targetfigurecaption">
+                                <h3 class="targetfiguretitle">Hôtel Les mouettes</h3>
+                                <p class="targetcardprice">Nuit à partir de 76€</p>
+                                <div class="targetcardgrade">
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star badgrade"></i>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="targetcard">
+                        <figure class="targetfigure">
+                            <img src="images/Hotel de la mer.jpg" class="targetimg" alt="Chambre avec un lit 2 places et une décoration plage ">
+                            <figcaption class="targetfigurecaption">
+                                <h3 class="targetfiguretitle">Hôtel de la mer</h3>
+                                <p class="targetcardprice">Nuit à partir de 46€</p>
+                                <div class="targetcardgrade">
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star badgrade"></i>
+                                    <i class="fas fa-star badgrade"></i>
+                                </div>
+                            </figcaption>          
+                        </figure>
+                    </article>
+                    <article class="targetcard">
+                        <figure class="targetfigure">
+                            <img src="images/AubergeLePanier.jpg" class="targetimg" alt="Chambre avec deux lits superposés dans un style rustique">
+                            <figcaption class="targetfigurecaption">
+                                <h3 class="targetfiguretitle">Auberge Le Panier</h3>
+                                <p class="targetcardprice">Nuit à partir de <strong>23€</strong></p>
+                                <div class="targetcardgrade">
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star badgrade"></i>
+                                </div>
+                            </figcaption>         
+                        </figure>
+                    </article>
+                    <article class="targetcard">
+                        <figure class="targetfigure">
+                            <img src="images/Hotel chez Amina.jpg" class="targetimg" alt="Chambre épurée avec deux lits séparés">
+                            <figcaption class="targetfigurecaption">
+                                <h3 class="targetfiguretitle">Hôtel chez Amina </h3>
+                                <p class="targetcardprice">Nuit à partir de 96€</p>
+                                <div class="targetcardgrade">
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                    <i class="fas fa-star goodgrade"></i>
+                                </div>
+                            </figcaption>          
+                        </figure>
+                    </article>
+                </section>    
                 </section>
                 <article class="mostpopularlodging">
                 </article>
