--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <title>Booki-Accueil</title>
         <meta charset="UTF-8">
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+    </head>
     <body>
         <div class="global">
             <header class="header">
@@ -30,7 +30,7 @@
                     <input type="text" placeholder=" Marseille, France" name="citysearch" id="citysearch" required/>
                 <button class="desksearch" type="submit">Rechercher</button>
                 <button class="phonesearch" type="submit">
-                    <i class="fas fa-search"></i></a>
+                    <i class="fas fa-search"></i>
                 </button>
                 </form>
             </section>
@@ -120,7 +120,7 @@
                     <article class="targetcard">
                         <a href="">
                             <figure class="targetfigure">
-                                <img src="images/Hotel de la mer.jpg" class="targetimg" alt="Chambre avec un lit 2 places et une décoration plage ">
+                                <img src="images/Hoteldelamer.jpg" class="targetimg" alt="Chambre avec un lit 2 places et une décoration plage ">
                                 <figcaption class="targetfigurecaption">
                                     <h3 class="targetfiguretitle">Hôtel de la mer</h3>
                                     <p class="targetcardprice">Nuit à partir de 46<strong>€</strong></p>
@@ -156,7 +156,7 @@
                     <article class="targetcard">
                         <a href=#>
                             <figure class="targetfigure">
-                                <img src="images/Hotel chez Amina.jpg" class="targetimg" alt="Chambre épurée avec deux lits séparés">
+                                <img src="images/HotelchezAmina.jpg" class="targetimg" alt="Chambre épurée avec deux lits séparés">
                                 <figcaption class="targetfigurecaption">
                                     <h3 class="targetfiguretitle">Hôtel chez Amina </h3>
                                     <p class="targetcardprice">Nuit à partir de 96<strong>€</strong></p>
@@ -183,7 +183,7 @@
                             <figure class="popularfigure">
                                 <img src="images/HotelLeSoleilDuMatin.jpg" class="popularimg" alt="Chambre épurée avec deux lits séparés">
                                 <figcaption class="popularfigurecaption">
-                                    <div class="test">
+                                    <div class="popularfigurecaptiontext">
                                         <h3 class="popularfiguretitle">Hôtel Le soleil du matin </h3>
                                         <p class="popularcardprice">Nuit à partir de 128<strong>€</strong></p>
                                     </div>
@@ -203,8 +203,10 @@
                             <figure class="popularfigure">
                                 <img src="images/AuCoeurDeLEau.jpg" class="popularimg" alt="Chambre épurée avec deux lits séparés">
                                 <figcaption class="popularfigurecaption">
-                                    <h3 class="popularfiguretitle">Au coeur de l'eau Chambres d'hôtes </h3>
-                                    <p class="popularcardprice">Nuit à partir de 71<strong>€</strong></p>
+                                    <div class="popularfigurecaptiontext">
+                                        <h3 class="popularfiguretitle">Au coeur de l'eau Chambres d'hôtes </h3>
+                                        <p class="popularcardprice">Nuit à partir de 71<strong>€</strong></p>
+                                    </div>
                                     <div class="popularcardgrade">
                                         <i class="fas fa-star goodgrade"></i>
                                         <i class="fas fa-star goodgrade"></i>
