--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <article class="targetcard">
                         <a href="#">
                             <figure class="targetfigure">
-                                <img src="images/HotelduPort.jpg" class="targetimg" alt="Chambre très grise avec deux lits séparés">
+                                <img src="images/HotelduPort.jpg" class="targetimg" alt="Chambre grise avec deux lits séparés">
                                 <figcaption class="targetfigurecaption">
                                     <h3 class="targetfiguretitle">Hôtel du Port</h3>
                                     <p class="targetcardprice">Nuit à partir de 52<strong>€</strong></p>
@@ -181,7 +181,7 @@
                     <article class="popularcard">
                         <a href=#>
                             <figure class="popularfigure">
-                                <img src="images/HotelLeSoleilDuMatin.jpg" class="popularimg" alt="Chambre épurée avec deux lits séparés">
+                                <img src="images/HotelLeSoleilDuMatin.jpg" class="popularimg" alt="Chambre aux murs verts avec un lit deux places en dessous d'un grand miroir">
                                 <figcaption class="popularfigurecaption">
                                     <div class="popularfigurecaptiontext">
                                         <h3 class="popularfiguretitle">Hôtel Le soleil du matin </h3>
@@ -201,7 +201,7 @@
                     <article class="popularcard">
                         <a href=#>
                             <figure class="popularfigure">
-                                <img src="images/AuCoeurDeLEau.jpg" class="popularimg" alt="Chambre épurée avec deux lits séparés">
+                                <img src="images/AuCoeurDeLEau.jpg" class="popularimg" alt="Chambre au style moderne avec un lit deux places">
                                 <figcaption class="popularfigurecaption">
                                     <div class="popularfigurecaptiontext">
                                         <h3 class="popularfiguretitle">Au coeur de l'eau Chambres d'hôtes </h3>
@@ -221,7 +221,7 @@
                     <article class="popularcard">
                         <a href=#>
                             <figure class="popularfigure">
-                                <img src="images/HotelToutBleuEtBLanc.jpg" class="popularimg" alt="Chambre épurée avec deux lits séparés">
+                                <img src="images/HotelToutBleuEtBLanc.jpg" class="popularimg" alt="Chambre épurée avec un lit deux places">
                                 <figcaption class="popularfigurecaption">
                                     <div class="popularfigurecaptiontext">
                                         <h3 class="popularfiguretitle">Hôtel Tout bleu et Blanc </h3>
@@ -241,77 +241,75 @@
                     
                 </aside>
             </div>
-            <div id="activities" class="blocactivity">
-                <section class="activities">
-                    <header class="activitiesheader">
-                        <h2 class="activitiesheadertitle">Activités à Marseille</h2>
-                    </header>
-                        <article class="activitybig">
-                            <a href="#" class="activitylink">
-                                <figure class="activityfigure">
-                                    <img src="images/VieuxPort.jpg" class="activitybigimg" alt="Dizaines de bateaux dans le port avec la ville en arrière plan">
-                                    <figcaption>
-                                        <h3 class="activityfiguretitle">Vieux Port</h3>
-                                    </figcaption>
-                                </figure>
-                            </a>
-                        </article>
-                        <div class="activitiesduo">
-                            <article class="activitysmall1">
-                                <a href="#">
-                                    <figure class="activityfigure">
-                                        <img src="images/FortDePomegues.jpg" class="activitysmall1img" alt="Petit fort au milieu de rochers">
-                                        <figcaption>
-                                            <h3 class="activityfiguretitle">Fort de Pomègues</h3>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </article>
-                            <article class="activitysmall2">
-                                <a href="#">
-                                <figure class="activityfigure">
-                                    <img src="images/IleDuFrioul.jpg" class="activitysmall2img" alt="Petite ile au loin">
-                                    <figcaption>
-                                        <h3 class="activityfiguretitle">Ile du Frioul</h3>
-                                    </figcaption>
-                                </figure>
-                                </a>
-                            </article>
-                        </div>
-                        <article class="activitybig">
+            <section id="activities" class="activities">
+                <header class="activitiesheader">
+                    <h2 class="activitiesheadertitle">Activités à Marseille</h2>
+                </header>
+                    <article class="activitybig">
+                        <a href="#" class="activitylink">
+                            <figure class="activityfigure">
+                                <img src="images/VieuxPort.jpg" class="activitybigimg" alt="Dizaines de bateaux dans le port avec la ville en arrière plan">
+                                <figcaption>
+                                    <h3 class="activityfiguretitle">Vieux Port</h3>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </article>
+                    <div class="activitiesduo">
+                        <article class="activitysmall1">
                             <a href="#">
                                 <figure class="activityfigure">
-                                    <img src="images/ParcNationalCalanques.jpg" class="activitybigimg" alt="Panorama de la cote rocheuse">
+                                    <img src="images/FortDePomegues.jpg" class="activitysmall1img" alt="Petit fort au milieu de rochers">
                                     <figcaption>
-                                        <h3 class="activityfiguretitle">Parc National des Calanques</h3>
+                                        <h3 class="activityfiguretitle">Fort de Pomègues</h3>
                                     </figcaption>
                                 </figure>
                             </a>
                         </article>
-                        <div class="activitiesduo">
-                            <article class="activitysmall3">
-                                <a href="#">
-                                    <figure class="activityfigure">
-                                        <img src="images/NotreDameDeLaGarde.jpg" class="activitysmall3img" alt="Vue éloignée de la basilique sur une colline surplombant la ville ">
-                                        <figcaption>
-                                            <h3 class="activityfiguretitle">Notre-Dame-de-la-Garde</h3>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </article>
-                            <article class="activitysmall4">
-                                <a href="#">
-                                    <figure class="activityfigure">
-                                        <img src="images/ParcLongchamp.jpg" class="activitysmall4img" alt="Vue du batiment depuis le bassin de la fontaine">
-                                        <figcaption>
-                                            <h3 class="activityfiguretitle">Parc Longchamp</h3>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </article>
-                        </div>
-                </section>
-            </div>
+                        <article class="activitysmall2">
+                            <a href="#">
+                            <figure class="activityfigure">
+                                <img src="images/IleDuFrioul.jpg" class="activitysmall2img" alt="Petite ile au loin">
+                                <figcaption>
+                                    <h3 class="activityfiguretitle">Ile du Frioul</h3>
+                                </figcaption>
+                            </figure>
+                            </a>
+                        </article>
+                    </div>
+                    <article class="activitybig">
+                        <a href="#">
+                            <figure class="activityfigure">
+                                <img src="images/ParcNationalCalanques.jpg" class="activitybigimg" alt="Panorama de la cote rocheuse">
+                                <figcaption>
+                                    <h3 class="activityfiguretitle">Parc National des Calanques</h3>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </article>
+                    <div class="activitiesduo">
+                        <article class="activitysmall3">
+                            <a href="#">
+                                <figure class="activityfigure">
+                                    <img src="images/NotreDameDeLaGarde.jpg" class="activitysmall3img" alt="Vue éloignée de la basilique sur une colline surplombant la ville ">
+                                    <figcaption>
+                                        <h3 class="activityfiguretitle">Notre-Dame-de-la-Garde</h3>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </article>
+                        <article class="activitysmall4">
+                            <a href="#">
+                                <figure class="activityfigure">
+                                    <img src="images/ParcLongchamp.jpg" class="activitysmall4img" alt="Vue du batiment depuis le bassin de la fontaine">
+                                    <figcaption>
+                                        <h3 class="activityfiguretitle">Parc Longchamp</h3>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </article>
+                    </div>
+            </section>
         </div>
         <footer class="footer">
             <ul>
